JDK 查看虚拟机参数 jinfo 命令。